Make sure selector label stays readable

--- a/themes/finna2/less/finna/mylist.less
+++ b/themes/finna2/less/finna/mylist.less
@@ -428,11 +428,12 @@ span.caret {
 
       @media (max-width: @screen-sm) {
         text-align: left;
-        max-width: 35%;
+        max-width: 50%;
 
         .sort-button {
           span {
             display: inline-block;
+            max-width: 100%;
             padding-right: 20px;
             margin-bottom: -6px;
           }
@@ -446,8 +447,8 @@ span.caret {
 
           i.fa-arrow-down {
             position: absolute;
-            top: 1rem;
-            right: 1rem;
+            top: 30%;
+            right: 0.7em;
             margin-left: 0;
           }
         }
